js/js.translator/testData/incremental/invalidation/jsCodeWithConstStringFromOtherModule/lib2/simpleFunction.4.kt
fun simpleFunction(): String {
    return js("'4'") as String
}
